# BigIntMultiplication

./: CMakeLists.txt  README.md  mult2int.sln
include/: BigIntMultiplicator.h
mult2int/: BigIntMultiplicator.cpp  main.cpp  mult2int.vcxproj  mult2int.vcxproj.filters
mult2int/Debug/: mult2int.exe.recipe  mult2int.ilk  vc142.idb
mult2int/Debug/mult2int.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mult2int.lastbuildstate
mult2int/result/: iterative.txt
mult2int/test/: test1.txt  test2.txt  test3.txt  test4.txt
tests/: test.txt
